--- a/style.scss
+++ b/style.scss
@@ -381,7 +381,7 @@ $sectionPadding: 65px;
                 position: relative;
                 width: 30%;
                 height: auto;
-                border: 2px solid $accentlight;
+                border: 2px solid black;
                 border-radius: 8px;
             }
         }
