--- a/style.scss
+++ b/style.scss
@@ -231,7 +231,7 @@ $sectionPadding: 65px;
             height: 150px;
             border-radius: 50%;
             background-color: $white;
-            border: 4px solid $accentlight;
+            border: 4px solid $accent;
         }
     }
     .description-container {
@@ -264,7 +264,7 @@ $sectionPadding: 65px;
             border-bottom-right-radius: 4px;
             margin: 0 4px;
             margin-bottom: 16px;
-            border-top: 2px solid $accentlight;
+            border-top: 2px solid $accent;
             width: 100%;
             max-width: 300px;
             height: 300px;
@@ -443,6 +443,10 @@ $sectionPadding: 65px;
     .form-group {
         display: flex;
         flex-direction: row;
+
+        input {
+            min-width: 0;
+        }
 
         @media screen and(min-width: calc(#{$tablets} + 1px)) {
             input {
